--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,4 +4,71 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+  <!-- 상단바 -->
+  <LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="45dp">
+
+    <ImageButton
+      android:paddingRight="17dp"
+      android:paddingLeft="8dp"
+      android:paddingTop="12.5dp"
+      android:paddingBottom="12.5dp"
+      android:layout_width="37dp"
+      android:layout_height="match_parent"
+      android:background="#00000000"
+      android:src="@drawable/back"
+      android:id="@+id/btn_back_profile"
+      android:backgroundTint="#000000"/>
+
+    <View
+      android:layout_weight="1"
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"/>
+
+    <ImageButton
+      android:id="@+id/btn_block"
+      android:layout_gravity="right|center_vertical"
+      android:background="@drawable/channel"
+      android:padding="13dp"
+      android:layout_width="45dp"
+      android:layout_height="45dp"/>
+
+  </LinearLayout>
+
+  <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="250dp">
+
+    <com.joooonho.SelectableRoundedImageView
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      app:sriv_right_top_corner_radius="14.5dp"
+      app:sriv_left_top_corner_radius="14.5dp"
+      app:sriv_left_bottom_corner_radius="14.5dp"
+      app:sriv_right_bottom_corner_radius="14.5dp"
+      app:sriv_border_color="#979797"
+      app:sriv_border_width="1dp"
+      android:layout_gravity="center"
+      android:layout_marginTop="10dp"
+      android:layout_width="150dp"
+      android:layout_height="150dp"
+      android:scaleType="centerCrop"
+      android:id="@+id/iv_companyProfile_picture"/>
+
+    <TextView
+      android:id="@+id/tv_companyName"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="30dp"/>
+
+    <TextView
+      android:id="@+id/tv_companyComment"
+      android:gravity="center"
+      android:layout_width="match_parent"
+      android:layout_height="20dp"/>
+
+  </LinearLayout>
+
 </LinearLayout>
