--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -71,4 +71,9 @@
 
   </LinearLayout>
 
+  <ListView
+    android:id="@+id/lv_profile_channel_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
+
 </LinearLayout>
