--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -33,25 +33,21 @@
       android:layout_width="match_parent"
       android:layout_height="72dp">
 
-      <FrameLayout
+      <com.joooonho.SelectableRoundedImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:sriv_right_top_corner_radius="75dp"
+        app:sriv_left_top_corner_radius="75dp"
+        app:sriv_left_bottom_corner_radius="75dp"
+        app:sriv_right_bottom_corner_radius="75dp"
+        app:sriv_border_color="#979797"
+        app:sriv_border_width="1dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="17dp"
         android:layout_width="40dp"
-        android:layout_height="40dp">
-
-        <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:background="@drawable/background_tab"
-          android:id="@+id/iv_companyPicture"/>
-
-        <Button
-          android:background="@null"
-          android:id="@+id/btn_company"
-          android:layout_height="match_parent"
-          android:layout_width="match_parent"/>
-
-      </FrameLayout>
+        android:layout_height="40dp"
+        android:scaleType="centerCrop"
+        android:clickable="true"
+        android:id="@+id/iv_companyPicture"/>
 
       <LinearLayout
         android:orientation="vertical"
