--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -38,6 +38,7 @@
   </LinearLayout>
 
   <LinearLayout
+    android:id="@+id/ll_company_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="250dp">
@@ -70,6 +71,11 @@
       android:layout_height="20dp"/>
 
   </LinearLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:background="#efefef"
+    android:layout_height="1dp"/>
 
   <ListView
     android:id="@+id/lv_profile_channel_list"
