--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -11,12 +11,17 @@
     android:layout_width="343dp"
     android:layout_height="240dp">
 
-    <ImageView
-      android:scaleType="centerCrop"
+    <com.joooonho.SelectableRoundedImageView
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      app:sriv_right_top_corner_radius="5dp"
+      app:sriv_left_top_corner_radius="5dp"
+      app:sriv_oval="false"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:scaleType="centerCrop"
       android:layout_weight="0.74"
-      android:id="@+id/iv_home_advertise"/>
+      android:id="@+id/iv_home_advertise"
+      android:background="#00000000"/>
 
     <Button
       android:layout_width="match_parent"
