--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -84,24 +84,14 @@
       android:layout_height="wrap_content"
       android:id="@+id/tv_setting_version"/>
     <TextView
-      android:text="1.0 ver"
+      android:text="1.0"
       android:textSize="12sp"
       android:layout_toLeftOf="@+id/iv_setting_version"
       android:layout_gravity="center_vertical|right"
-      android:layout_marginRight="35dp"
       android:layout_centerVertical="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/tv_setting_versionNum"/>
-    <ImageView
-      android:layout_width="30dp"
-      android:layout_height="30dp"
-      android:background="@mipmap/next"
-      android:layout_gravity="center_vertical|right"
-      android:id="@+id/iv_setting_version"
-      android:layout_centerVertical="true"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentEnd="true"/>
     <Button
       android:background="@null"
       android:layout_width="match_parent"
