--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,7 +20,7 @@
       android:layout_marginBottom="40dp"
       android:layout_weight="0.20"
       android:background="#00000000"
-      android:src="@drawable/puzi_bi_01" />
+      android:src="@drawable/puzi_bi" />
 
     <EditText
       android:background="@drawable/edittext"
