--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
   <color name="colorBlack">#000000</color>
   <color name="colorGray">#828282</color>
 
-  <color name="colorPuzi">#f13d3a</color>
+  <color name="colorPuzi">#ff2470</color>
 
   <color name="noAlpha">#00000000</color>
 </resources>
