--- a/app/src/main/res/layout/layout_splash.xml
+++ b/app/src/main/res/layout/layout_splash.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/colorWhite"
-              android:orientation="vertical" >
+              android:layout_height="match_parent">
 
   <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="100dp"
-    android:layout_marginLeft="130dp"
-    android:layout_marginRight="130dp">
+    android:layout_marginTop="100dp">
 
     <ImageView
-      android:layout_width="108dp"
-      android:layout_height="144dp"
+      android:layout_width="110dp"
+      android:layout_height="150dp"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:src="@drawable/splash_logo" />
   </RelativeLayout>
 
   <LinearLayout
-    android:layout_marginTop="150dp"
+    android:layout_marginTop="180dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
