--- a/app/src/main/res/drawable/progress_bar.xml
+++ b/app/src/main/res/drawable/progress_bar.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
   <item android:id="@android:id/background">
     <shape>
-      <corners android:radius="5dip"/>
-      <gradient
-        android:startColor="#ffffff"
-        android:centerY="0.75"
-        android:endColor="#ffffff"
-        android:angle="270"
-      />
+      <corners android:radius="6dp" />
+      <solid android:color="#D5D5D5" />
     </shape>
   </item>
-
-  <item android:id="@android:id/progress">
+  <item android:id="@android:id/secondaryProgress">
     <clip>
       <shape>
-        <corners android:radius="5dip" />
-        <gradient
-          android:startColor="#66eeff"
-          android:endColor="#66eeff"
-          android:angle="270"
-        />
+        <corners android:radius="6dp" />
+        <solid android:color="#9d9d9d" />
       </shape>
     </clip>
   </item>
-
+  <item android:id="@android:id/progress">
+    <clip>
+      <shape>
+        <corners android:radius="6dp" />
+        <solid android:color="#6d6d6d" />
+      </shape>
+    </clip>
+  </item>
 </layer-list>
