--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,11 +129,9 @@
       android:orientation="vertical">
       <ImageView
         android:id="@+id/iv_advertise"
-        android:layout_width="48dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:background="#00000000"
-        android:paddingBottom="7dp"/>
+        android:layout_width="24dp"
+        android:layout_height="22dp"
+        android:layout_gravity="center"/>
       <Button
         android:id="@+id/btn_advertise"
         android:layout_width="match_parent"
@@ -151,11 +149,9 @@
 
       <ImageView
         android:id="@+id/iv_channel"
-        android:layout_width="48dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:background="#00000000"
-        android:paddingBottom="7dp"/>
+        android:layout_width="24dp"
+        android:layout_height="22dp"
+        android:layout_gravity="center"/>
 
       <Button
         android:id="@+id/btn_channel"
@@ -174,11 +170,9 @@
 
       <ImageView
         android:id="@+id/iv_store"
-        android:layout_width="48dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:background="#00000000"
-        android:paddingBottom="7dp"/>
+        android:layout_width="24dp"
+        android:layout_height="22dp"
+        android:layout_gravity="center"/>
 
       <Button
         android:id="@+id/btn_store"
@@ -197,11 +191,9 @@
 
       <ImageView
         android:id="@+id/iv_setting"
-        android:layout_width="48dp"
-        android:layout_height="49dp"
-        android:layout_gravity="center"
-        android:background="#00000000"
-        android:paddingBottom="7dp"/>
+        android:layout_width="24dp"
+        android:layout_height="22dp"
+        android:layout_gravity="center"/>
 
       <Button
         android:id="@+id/btn_setting"
