--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -80,6 +80,8 @@
   <ListView
     android:id="@+id/lv_profile_channel_list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"/>
+    android:layout_height="match_parent"
+    android:dividerHeight="0dp"
+    android:background="#00000000"/>
 
 </LinearLayout>
