--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -15,6 +15,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       app:sriv_right_top_corner_radius="5dp"
       app:sriv_left_top_corner_radius="5dp"
+      app:sriv_right_bottom_corner_radius="5dp"
+      app:sriv_left_bottom_corner_radius="5dp"
       app:sriv_oval="false"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
