--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -37,7 +37,10 @@
       <Button
         android:text="title"
         android:textSize="16sp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="5dp"
         android:typeface="sans"
         android:maxLines="2"
         android:ellipsize="end"
@@ -140,7 +143,10 @@
       <Button
         android:text="title"
         android:textSize="16sp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="5dp"
         android:typeface="sans"
         android:maxLines="1"
         android:ellipsize="end"
