--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
+              android:background="#efefef"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -8,6 +9,7 @@
   <LinearLayout
     android:orientation="horizontal"
     android:layout_width="match_parent"
+    android:background="@color/colorWhite"
     android:layout_height="50dp">
 
     <ImageButton
@@ -41,8 +43,10 @@
       android:id="@+id/tv_title_companyName"
       android:gravity="center"
       android:layout_marginLeft="3dp"
-      android:visibility="invisible"
       android:layout_width="wrap_content"
+      android:textSize="16sp"
+      android:textColor="#333333"
+      android:visibility="invisible"
       android:layout_height="match_parent"/>
 
     <View
@@ -53,8 +57,9 @@
     <ImageButton
       android:id="@+id/btn_block"
       android:layout_gravity="right|center_vertical"
-      android:background="@drawable/channel"
+      android:src="@drawable/wrong"
       android:padding="13dp"
+      android:background="#00000000"
       android:layout_width="45dp"
       android:layout_height="45dp"/>
 
@@ -75,6 +80,7 @@
       <LinearLayout
         android:id="@+id/ll_company_container"
         android:orientation="vertical"
+        android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -88,6 +94,7 @@
           app:sriv_border_width="1dp"
           android:layout_gravity="center"
           android:layout_marginTop="10dp"
+          android:layout_marginBottom="16dp"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:scaleType="centerCrop"
@@ -96,14 +103,20 @@
         <TextView
           android:id="@+id/tv_companyName"
           android:gravity="center"
+          android:textSize="20sp"
+          android:textColor="#333333"
+          android:layout_marginBottom="2dp"
           android:layout_width="match_parent"
-          android:layout_height="30dp"/>
+          android:layout_height="wrap_content"/>
 
         <TextView
           android:id="@+id/tv_companyComment"
           android:gravity="center"
+          android:textSize="16sp"
+          android:textColor="#6d6d6d"
+          android:layout_marginBottom="24dp"
           android:layout_width="match_parent"
-          android:layout_height="20dp"/>
+          android:layout_height="wrap_content"/>
 
       </LinearLayout>
       <LinearLayout
@@ -115,7 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#00000000"
-        android:background="#00000000"/>
+        android:background="#efefef"/>
     </LinearLayout>
   </com.puzi.puzi.ui.CusomScrollView>
 
